[Polyam] Fix onboarding step descriptions being truncated on narrow screens
Port b20af17a2c7dec49bc7ad1ec6706c5b02bf4f498 to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/components/columns.scss
+++ b/app/javascript/flavours/polyam/styles/components/columns.scss
@@ -1090,14 +1090,11 @@ $ui-header-height: 55px;
         color: $highlight-text-color;
         font-weight: 500;
         font-size: 14px;
-        overflow: hidden;
-        text-overflow: ellipsis;
       }
 
       p {
         color: $darker-text-color;
         overflow: hidden;
-        text-overflow: ellipsis;
       }
     }
   }
